dev/web-api-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-app
spec:
  selector:
    matchLabels:
      run: web-api-app
  replicas: 2
  template:
    metadata:
      labels:
        run: web-api-app
    spec:
      containers:
      - name: web-api-app
        image: romanas/web-api-app:1.1.1734
        ports:
          - containerPort: 80
            name: http-web-api
