dev/web-api-app/web-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-api-app
  labels:
    app: web-api-app
spec:
  selector:
    app: web-api-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
