dev/web-api-app/web-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-api-routing
  namespace: web-api-app
  labels:
    run: web-api-app  
spec:
  ingressClassName: nginx
  rules:
  - host: webapi-test.skuba.eu
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-api-app
              port:
                number: 80
